# dev-web-3trimestre

./: package-lock.json
backend/: .gitignore  db.sqlite3  pyproject.toml
backend/config/: settings.py
frontend/: package-lock.json  package.json
frontend/src/components/: HeaderComp.vue  MovieComp.vue
frontend/src/plugins/: axios.js
frontend/src/router/: index.js
frontend/src/stores/: genre.js  user.js
frontend/src/views/: AboutView.vue  ForgotPasswordView.vue  HomeView.vue  MainView.vue  MoviesView.vue  RegistroView.vue
