[project]
name = ""
version = ""
description = ""
authors = [
    {name = "LucasGabrielAntonete", email = "lucasantonete@gmail.com"},
]
dependencies = [
    "django>=5.0",
    "setuptools>=69.0.2",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.0",
    "drf-spectacular>=0.26.5",
    "django-cors-headers>=4.3.1",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.9",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

